fix(tagutil): handle null SourceTextEntry in getAllTagsInSource method